--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
-        <a href="/articles.html">Articles</a>
+        <a href="articles.html">Articles</a>
         <a href="#">Contact</a>
     </nav>
 </body>
