--- a/articles.html
+++ b/articles.html
@@ -33,6 +33,6 @@
 </head>
 <body>
     <h1>Articles</h1>
-    <a href="skeptic.html">What does it mean to live like a skeptic?</a>
+    <a href="post1.html">On likelihoods</a>
 </body>
 </html>
