--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>uneeb</h1>
     <nav>
         <a href="about.html">about</a>
-        <a href="blog.html">blog</a>
+        <a href="/blog/">blog</a>
     </nav>
 </body>
 </html>
