--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <h1>uneeb</h1>
     <nav>
-        <a href="about.html">about</a>
-        <a href="/blog/">blog</a>
+        <a href="./about.html">about</a>
+        <a href="./blog/">blog</a>
     </nav>
 </body>
 </html>
