--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empty HTML Page</title>
 </head>
 <body>
-
+    <h1>about</h1>
+    <p>
+        im a software engineer who lives in austin (but im moving to nyc after july 4th weekend, 2025). i love to run, cycle,
+        and hang out with funny and interesting people.
+    </p>
 </body>
 </html>
