--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Empty HTML Page</title>
+    <title>about</title>
 </head>
 <body>
     <h1>about</h1>
